# loan-prepayment-analysis

./: .gitignore  README.md  main.py  pyproject.toml
src/loan_opt/: analysis.py  loan.py  returns.py  scenario.py
